force-app/main/default/objects/Track__c/Track__c.object-meta.xml
<CustomObject>
    <description>Objeto para rastrear el ejercicio hecho día a día</description>
    <label>Track</label>
    <nameField>
        <label>Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>