force-app/main/default/objects/Track__c/fields/Calories_burned_Kcal__c.field-meta.xml
<CustomField>
    <fullName>Calories_burned_Kcal__c</fullName>
    <description>Número de calorías quemadas en la sesión (Kcal)</description>
    <label>Calories burned (Kcal)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>