force-app/main/default/objects/Track__c/fields/Date_of_execution__c.field-meta.xml
<CustomField>
    <fullName>Date_of_execution__c</fullName>
    <description>Día en el que se ejecutó la sesión</description>
    <label>Date of execution</label>
    <type>Date</type>
</CustomField>