force-app/main/default/objects/Track__c/fields/Day_of_the_week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_week__c</fullName>
    <formula>CASE(
  MOD(  Date_of_execution__c - DATE( 1900, 1, 7 ), 7 ),
  0, &quot;Sunday&quot;,
  1, &quot;Monday&quot;,
  2, &quot;Tuesday&quot;,
  3, &quot;Wednesday&quot;,
  4, &quot;Thursday&quot;,
  5, &quot;Friday&quot;, 
  &quot;Saturday&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of the week</label>
    <type>Text</type>
</CustomField>