force-app/main/default/objects/Track__c/fields/Is_it_a_good_day_to_exercise__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_good_day_to_exercise__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si es buen día para salir dependiendo de las condiciones del clima (Se llena automáticamente)</description>
    <inlineHelpText>Se llena automáticamente</inlineHelpText>
    <label>Is it a good day to exercise?</label>
    <type>Checkbox</type>
</CustomField>