force-app/main/default/objects/Track__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plan al que la sesión está sujeto</description>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Tracks</relationshipLabel>
    <relationshipName>Tracks_del</relationshipName>
    <type>Lookup</type>
</CustomField>