force-app/main/default/objects/Track__c/fields/Session_duration_Min__c.field-meta.xml
<CustomField>
    <fullName>Session_duration_Min__c</fullName>
    <description>Duración de la sesión en minutos</description>
    <label>Session duration (Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>